# gnome-passwordstore

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: main.rs  ui.rs
src/ui/: list_entry.rs  main_window.rs
